# dpatchz

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: build.yaml  release.yaml  test.yaml
src/: dwhbll-logging.cpp  dwhbll-streams.hpp  hdiffpatch.hpp  logging.cpp  main.cpp  parsing.cpp  parsing.hpp  patching.cpp  patching.hpp  utils.hpp
